# aiida-abinit

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  validate_release_tag.py
aiida_abinit/: calculations.py  parsers.py
aiida_abinit/utils/: dictionary.py  pseudos.py
aiida_abinit/workflows/: base.py  gw.py
aiida_abinit/workflows/protocols/: base.yaml  gw.yaml
docs/source/: conf.py
examples/: example_base.py  example_calculation.py  example_relax.py
tests/: conftest.py
tests/calculations/: test_abinit.py
